--- a/paragon/_variables.scss
+++ b/paragon/_variables.scss
@@ -59,7 +59,7 @@ $green:   #0D7D4D !default;
 //   $colors
 // );
 
-$primary: #00262B !default; // elm
+$primary: #f48d42 !default; // elm
 $brand: #D23228 !default;
 $success: $green !default;
 $info: $blue !default;
